<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical"
        android:rotation="0"
        android:visibility="visible"

        tools:visibility="visible">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/profile_picture_square"
                android:layout_height="@dimen/profile_picture_square"
                android:background="@color/white"
                android:contentDescription="@string/nama_lengkap"
                app:srcCompat="@drawable/profile_picture" />
        </FrameLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:clipToPadding="false"
        android:fillViewport="true"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:paddingLeft="@dimen/activity_padding_horizontal"

            android:paddingTop="@dimen/activity_padding_vertical"
            android:paddingRight="@dimen/activity_padding_horizontal"
            android:rotationX="0"
            android:scrollbarStyle="insideInset"

            tools:visibility="visible">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_padding_vertical"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/nama_lengkap"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_title" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_nim"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/nim"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_kelas"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/kelas"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_jenis_kelamin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/jenis_kelamin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_tempat_tanggal_lahir"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/tempat_tanggal_lahir"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_alamat_rumah"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/alamat_rumah"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_golongan_darah"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/golongan_darah"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_makanan_kesukaan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/makanan_kesukaan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_minuman_kesukaan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/minuman_kesukaan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_hobi"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/hobi"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_lagu_favorit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/lagu_favorit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_film_favorit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/film_favorit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/attribute_padding"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/label_pekerjaan_impian"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/pekerjaan_impian"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_value" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>